k8s/overlays/dev/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: quak
spec:
  template:
    spec:
      containers:
        - name: server
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
