k8s/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quak
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
    - hosts:
        - quak-dev.scalebase.io
      secretName: quak-dev-tls
  rules:
    - host: quak-dev.scalebase.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quak-dev
                port:
                  name: http
